--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <footer>
 
   <div id="contact">
-    <h3 class="reverse">Contact me</h3>
+    <h3 class="reverse">Get in touch...</h3>
     <ul class="contact-list">
     <li>Wai Le Marshall</li>
     <li>Mobile: 0420 123 456</li>
