--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 </footer>
 </div>
-<!--  -->
+<!-- modal menu hidden -->
 
 <div id="modal-menu" class="hidden">
   <p id="close-btn">Close X</p>
