--- a/index.html
+++ b/index.html
@@ -83,6 +83,31 @@
       </div>
     </a>
 
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-1"></div>
+      <div class="card-content">
+        <h3>Case Study title goes here</h3>
+        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+      </div>
+    </a>
+
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-1"></div>
+      <div class="card-content">
+        <h3>Case Study title goes here</h3>
+        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+      </div>
+    </a>
+    
+
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-1"></div>
+      <div class="card-content">
+        <h3>Case Study title goes here</h3>
+        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+      </div>
+    </a>
+
 
     <div id="card"></div>
     <div id="card"></div>
