--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   
   <main id="portfolio">
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./" class="nav-btn" id="card">
       <div class="card-hero-1"></div>
       <div class="card-content">
         <h3>Case Study title goes here</h3>
@@ -84,7 +84,7 @@
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
-      <div class="card-hero-1"></div>
+      <div class="card-hero-2"></div>
       <div class="card-content">
         <h3>Case Study title goes here</h3>
         <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
@@ -92,7 +92,7 @@
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
-      <div class="card-hero-1"></div>
+      <div class="card-hero-3"></div>
       <div class="card-content">
         <h3>Case Study title goes here</h3>
         <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
@@ -101,7 +101,23 @@
     
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
-      <div class="card-hero-1"></div>
+      <div class="card-hero-4"></div>
+      <div class="card-content">
+        <h3>Case Study title goes here</h3>
+        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+      </div>
+    </a>
+
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-5"></div>
+      <div class="card-content">
+        <h3>Case Study title goes here</h3>
+        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+      </div>
+    </a>
+
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-6"></div>
       <div class="card-content">
         <h3>Case Study title goes here</h3>
         <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
