--- a/index.html
+++ b/index.html
@@ -4,32 +4,15 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <script src="https://use.fontawesome.com/f2abd0818c.js"></script>
 <title>Wai-Portfolio</title>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NLQFEHK729"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-NLQFEHK729');
-</script>
-<!-- Hotjar Tracking Code for https://wailm.github.io/UX_UI_HW_20/ -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3085754,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
 </head>
 <body>
 
 <nav>
-    <a href="index.html" class="nav-btn" id="WaiBrand">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 370.48 99"><defs><style>.cls-1{fill:#fb3f5c;}.cls-2{fill:#50534f;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><polygon class="cls-1" points="0 0 36.03 99 56.44 99 20.4 0 0 0"/><polygon class="cls-1" points="73.89 0 49.81 66.16 60.01 94.19 94.29 0 73.89 0"/><polygon class="cls-1" points="150.34 68.61 150.34 99 171.07 99 171.07 11.68 150.34 68.61"/><polygon class="cls-1" points="149.59 0 125.51 66.16 135.71 94.19 170 0 149.59 0"/><polygon class="cls-1" points="97.86 4.81 78.32 58.5 117.4 58.5 97.86 4.81"/><polygon class="cls-1" points="98.82 63.5 111.74 99 132.14 99 119.22 63.5 98.82 63.5"/><path class="cls-2" d="M191.35,68h7.78a14.63,14.63,0,0,1,14.81,15c0,8.62-6.32,15.34-14.81,15.34h-7.78Zm2.74,27.59h4.47c7.2,0,12.37-5.35,12.37-12.6,0-7-4.42-12.25-11.71-12.25h-5.13Z"/><path class="cls-2" d="M218.62,98.29V68H235V70.7H221.37V81.54H235v2.74H221.37V95.55H235v2.74Z"/><path class="cls-2" d="M241.08,92c1.86,2.87,4.07,4.24,7.52,4.24,3.71,0,6.45-2.17,6.45-6,0-8.49-15.56-3.85-15.56-14.42,0-5.52,4.33-8.57,9.51-8.57a11,11,0,0,1,8,3.62l-1.68,2C253.42,71.24,251.65,70,249,70c-3.54,0-6.5,1.81-6.5,5.66,0,7.56,15.56,3.58,15.56,14.32,0,5.53-4.16,9-9.51,9A10.46,10.46,0,0,1,239,93.7Z"/><path class="cls-2" d="M263.1,68h2.74V98.29H263.1Z"/><path class="cls-2" d="M296.79,94.89a18.14,18.14,0,0,1-11,4.11c-8.36,0-15.26-6.72-15.26-16.09A15.45,15.45,0,0,1,286.4,67.26a15.68,15.68,0,0,1,9.86,4l-1.68,2.12c-2.26-1.68-5.27-3.36-8.14-3.36a12.75,12.75,0,0,0-12.91,12.91c0,7.29,5.66,13.35,12.51,13.35a13,13,0,0,0,8-3V84.59h-9.29V81.85h12Z"/><path class="cls-2" d="M322.47,68h2.74V99h-.09L304.83,74.51h-.09V98.29H302v-31h.09l20.29,24.36h.09Z"/><path class="cls-2" d="M331.62,98.29V68H348V70.7h-13.6V81.54H348v2.74h-13.6V95.55H348v2.74Z"/><path class="cls-2" d="M353.46,98.29V68h6.1a8.53,8.53,0,0,1,8.84,8.89,8.33,8.33,0,0,1-7.21,8.67l9.29,11.67-2.79,1.46L356.38,83.84h-.18V98.29Zm2.74-15H360c3.63,0,5.39-2.7,5.39-6.46,0-3-2.12-6.15-5.35-6.15H356.2Z"/><path class="cls-2" d="M228.54,37.58c0,11.31-7.2,18.05-18.6,18.05s-18.59-6.74-18.59-18.05V0h4.8V37.74a13.3,13.3,0,0,0,13.79,13.09c8.68,0,13.8-6.89,13.8-14.57V0h4.8Z"/><path class="cls-2" d="M257,22.08,271.7.62,276,2.79l-16.12,23.4,20.15,26.35L275.34,55,257,30.38,239.23,55l-5-2.09,19.61-27.19-17-22.94,4-2.17Z"/><path class="cls-2" d="M291.37,55.63H287.5L305.24,0h3.88Z"/><path class="cls-2" d="M354.45,37.58c0,11.31-7.21,18.05-18.6,18.05s-18.6-6.74-18.6-18.05V0h4.81V37.74a13.29,13.29,0,0,0,13.79,13.09c8.68,0,13.79-6.89,13.79-14.57V0h4.81Z"/><path class="cls-2" d="M365.67,0h4.81V55.63h-4.81Z"/></g></g></svg></a>
-    </div>
+  <div class="nav-btn" id="WaiBrand">
+  <img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo">
+</div>
+
 
     <div class="navLinks">
         <a href="#about-me-section" class="nav-btn">About</a>
@@ -59,7 +42,7 @@
     <p id="introCopy">I’m a highly-motivated digital designer based in Melbourne. With over 20 years’ industry experience, I have a broad range of multi-platform skills and the versatility and proficiency to handle any creative challenge.
       </p>
 
-    <a href="./wires-casestudy.html" download class="primary-button">Download CV</a>
+    <a href="../images/WaiLeMarshall_CV.pdf" download class="primary-button">Download CV</a>
   </div>
   
 
@@ -142,7 +125,7 @@
     I thrive in busy, fast-paced studios: I can multi-task like a mother! I have a keen eye for detail and work well under pressure. I’m positive and sociable by nature.<br><br>
       I love learning and extending my skills having recently completed a UX/UI Bootcamp at Monash University, graduating with an A. I’m passionate about creating beautiful digital experiences that focus on the user.
       </p>
-    <button class="primary-button">Download CV</button>
+      <a href="../images/WaiLeMarshall_CV.pdf" download class="primary-button">Download CV</a>
   </div>
 
   <!-- skills & tools section -->
@@ -173,7 +156,7 @@
       <li>➞ Adobe XD</li>
       <li>➞ Adobe After Effects</li>
       <li>➞ Basic HTML, CSS, Github</li>
-      <li>➞ Understanding JavaScript, JQuery</li>
+      <li>➞ Basic JavaScript, JQuery</li>
   </ul>
 </div>
 
