--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <nav>
   <div class="nav-btn" id="WaiBrand">
-  <img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo">
+    <a href="https://www.linkedin.com/in/wai-lemarshall/"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" min width="200"></a>
 </div>
 
 
