--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
 
 <nav>
-  <div class="nav-btn" id="WaiBrand">
-    <a href="https://www.linkedin.com/in/wai-lemarshall/"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" min width="200"></a>
-</div>
+    <a href="index.html" class="nav-btn" id="WaiBrand"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" min width="200"></a>
 
 
     <div class="navLinks">
