--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a href="./" class="nav-btn" id="card">
       <div class="card-hero-1"></div>
       <div class="card-content">
-        <h3>Case Study title goes here</h3>
+        <h3>ABC Website Redesign</h3>
         <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
       </div>
     </a>
