--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-    <a href="index.html" class="nav-btn" id="WaiBrand"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" min width="200"></a>
+    <a href="index.html" class="nav-btn" id="wailogo"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" height="40"></a>
 
 
     <div class="navLinks">
@@ -53,7 +53,6 @@
 </div>
 <!-- Portfolio -->
   <div class="section-header">
-    <div class="section-label">
       <h2 id="portfolio-bookmark">Portfolio</h2>
     </div>
   </div>
@@ -63,23 +62,23 @@
       <div class="card-hero-1"></div>
       <div class="card-content">
         <h3>ABC Website Redesign</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h4>A responsive redesign of the ABC government website to improve functionality and user experience.</h4>
       </div>
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
       <div class="card-hero-2"></div>
       <div class="card-content">
-        <h3>Case Study title goes here</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h3>Travel App Product Design</h3>
+        <h4>An all-in-one digital travel wallet and itinerary planner.<br><br></h4>
       </div>
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
       <div class="card-hero-3"></div>
       <div class="card-content">
-        <h3>Case Study title goes here</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h3>Study buddy Product Design</h3>
+        <h4>A multi-platform tool designed to help parents track and motivate their children with homework and other tasks.</h4>
       </div>
     </a>
     
@@ -87,16 +86,16 @@
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
       <div class="card-hero-4"></div>
       <div class="card-content">
-        <h3>Case Study title goes here</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h3>Gods Grip Liquid Chalk</h3>
+        <h4>Branding and website redesign for  liquid chalk, used for better grip during rock climbing and sports.</h4>
       </div>
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
       <div class="card-hero-5"></div>
       <div class="card-content">
-        <h3>Case Study title goes here</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h3>Digital Flyers</h3>
+        <h4>Social media flyers promoting DJ events at various Melbourne venues.</h4>
       </div>
     </a>
 
@@ -104,7 +103,7 @@
       <div class="card-hero-6"></div>
       <div class="card-content">
         <h3>Case Study title goes here</h3>
-        <p>Analyse a Government website and develop a resposive design to improve user experience.</p>
+        <h4>Analyse a Government website and develop a resposive design to improve user experience.</h4>
       </div>
     </a>
 
@@ -167,7 +166,7 @@
 <footer>
 
   <div id="contact">
-    <h3 class="reverse">Get in touch...</h3>
+    <h2 class="reverse">Get in touch...</h2>
     <ul class="contact-list">
     <li>Wai Le Marshall</li>
     <li>Mobile: 0420 123 456</li>
@@ -175,7 +174,9 @@
     </ul>
     <div id="contact-logos"></div>
   </div>
-
+  
+  <img src="../images/Asset 6_Wai_logo_Col.png" alt="wai logo" height="60
+  ">
 
 </footer>
 </div>
