--- a/index.html
+++ b/index.html
@@ -165,18 +165,19 @@
 <div class="wrapper-grey">
 <footer>
 
-  <div id="contact">
-    <h2 class="reverse">Get in touch...</h2>
-    <ul class="contact-list">
-    <li>Wai Le Marshall</li>
-    <li>Mobile: 0420 123 456</li>
-    <li>wailemarshall@gmail.com</li>
-    </ul>
-    <div id="contact-logos"></div>
+  <div id="left-contact">
+    <h7 id="getintouch">Get in touch...</h7>
+    <h5 class="whitecopy">Wai Le Marshall</h5>
+    <h5 class="whitecopy">Mobile: 0420 123 456</h5>
+    <h5 class="whitecopy">wailemarshall@gmail.com</h5>
   </div>
   
-  <img src="../images/Asset 6_Wai_logo_Col.png" alt="wai logo" height="60
-  ">
+  <div id="right-contact">
+  <div class="logo-rev"><img class="wlogo" src="../images/Asset 6_Wai_logo_Col.png" alt="wai logo" height="40"></div>
+  <h6 class="whitecopy">Website designed & developed by Wai Le Marshall</h6>
+
+
+</div>
 
 </footer>
 </div>
