--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-    <a href="index.html" class="nav-btn" id="wailogo"><img src="../images/Asset 10_Wai_logo_Col.png" alt="wai logo" height="40"></a>
+    <a href="index.html" class="nav-btn" id="wailogo"><img src="../images/wai_logo_Col.png" alt="wai logo" height="40"></a>
 
 
     <div class="navLinks">
@@ -173,7 +173,7 @@
   </div>
   
   <div id="right-contact">
-  <div class="logo-rev"><img class="wlogo" src="../images/Asset 6_Wai_logo_Col.png" alt="wai logo" height="40"></div>
+  <div class="logo-rev"><img class="wlogo" src="../images/wai_logo_white.png" alt="wai logo" height="40"></div>
   <h6 class="whitecopy">Website designed & developed by Wai Le Marshall</h6>
 
 
