--- a/index.html
+++ b/index.html
@@ -105,24 +105,24 @@
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
       <div class="card-hero-6"></div>
       <div class="card-content">
+        <h3>Brochure</h3>
+        <h4>Brochures and catalogues for Officeworks, City of Melbourne and more.</h4>
+      </div>
+    </a>
+
+    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+      <div class="card-hero-7"></div>
+      <div class="card-content">
         <h3>Branding</h3>
-        <h4>Analyse a Government website and develop a resposive design to improve user experience.</h4>
+        <h4>Logo design and promotional flers for 'funky' baby clothing store.</h4>
       </div>
     </a>
 
     <a href="./wires-casestudy.html" class="nav-btn" id="card">
-      <div class="card-hero-5"></div>
+      <div class="card-hero-8"></div>
       <div class="card-content">
-        <h3>Catalogues</h3>
-        <h4>Social media flyers promoting DJ events at various Melbourne venues.</h4>
-      </div>
-    </a>
-
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
-      <div class="card-hero-6"></div>
-      <div class="card-content">
-        <h3>Promotions</h3>
-        <h4>Analyse a Government website and develop a resposive design to improve user experience.</h4>
+        <h3>Advertising</h3>
+        <h4>Print artwork for national magazines.</h4>
       </div>
     </a>
   
