--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
   
   <main id="portfolio">
-    <a href="./" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-1"></div>
       <div class="card-content">
         <h3>ABC Website Redesign</h3>
@@ -69,7 +69,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-2"></div>
       <div class="card-content">
         <h3>Travel App Product Design</h3>
@@ -77,7 +77,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-3"></div>
       <div class="card-content">
         <h3>Study buddy Product Design</h3>
@@ -86,7 +86,7 @@
     </a>
     
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-4"></div>
       <div class="card-content">
         <h3>Gods Grip Liquid Chalk</h3>
@@ -94,7 +94,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-5"></div>
       <div class="card-content">
         <h3>Digital Flyers</h3>
@@ -102,7 +102,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-6"></div>
       <div class="card-content">
         <h3>Brochure</h3>
@@ -110,7 +110,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-7"></div>
       <div class="card-content">
         <h3>Branding</h3>
@@ -118,7 +118,7 @@
       </div>
     </a>
 
-    <a href="./wires-casestudy.html" class="nav-btn" id="card">
+    <a href="./index-work.html" class="nav-btn" id="card">
       <div class="card-hero-8"></div>
       <div class="card-content">
         <h3>Advertising</h3>
